--- a/MSOEVoiceControl/app/src/main/res/layout/activity_main.xml
+++ b/MSOEVoiceControl/app/src/main/res/layout/activity_main.xml
@@ -154,6 +154,13 @@
                 android:layout_weight="1"
                 android:drawableLeft="@drawable/offline_map_arrow_down"
                 android:text="down" />
+
+            <Button
+                android:id="@+id/spinButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Reverse" />
         </LinearLayout>
     </LinearLayout>
 
